log/build_2026-06-15_07-57-13/line_follower_controller/stderr.log
In file included from /home/lucifer/anscer_workspace/LineFollower/src/line_follower_controller/src/PidController.cpp:9:
/home/lucifer/anscer_workspace/LineFollower/src/line_follower_controller/include/PidController.h: In constructor ‘line_follower::PidController::PidController(const rclcpp::NodeOptions&)’:
/home/lucifer/anscer_workspace/LineFollower/src/line_follower_controller/include/PidController.h:117:9: error: ‘line_follower::PidController::m_logCounter’ will be initialized after [-Werror=reorder]
  117 |     int m_logCounter;
      |         ^~~~~~~~~~~~
/home/lucifer/anscer_workspace/LineFollower/src/line_follower_controller/include/PidController.h:99:18: error:   ‘rclcpp::Time line_follower::PidController::m_turnStartTime’ [-Werror=reorder]
   99 |     rclcpp::Time m_turnStartTime;
      |                  ^~~~~~~~~~~~~~~
/home/lucifer/anscer_workspace/LineFollower/src/line_follower_controller/src/PidController.cpp:26:1: error:   when initialized here [-Werror=reorder]
   26 | PidController::PidController(const rclcpp::NodeOptions& options)
      | ^~~~~~~~~~~~~
cc1plus: all warnings being treated as errors
gmake[2]: *** [CMakeFiles/line_follower_controller_node.dir/build.make:76: CMakeFiles/line_follower_controller_node.dir/src/PidController.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/line_follower_controller_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
